Added documentation for social endpoints
